--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -308,7 +308,9 @@ ul {
       display: none;
    }
    .section-1 {
-      max-height: 800px;
+      height: 100vh;
+      background-image: linear-gradient(#00000073, #00000061), url(/images/homebg.jpg);
+      background-size: cover;
    }
    .popup {
       position: fixed;
