--- a/src/views/user/add-new-post.ejs
+++ b/src/views/user/add-new-post.ejs
@@ -373,6 +373,7 @@
                 convert_urls: true,
                 menubar: "",
                 //images_upload_url: '/media/create', 
+                //when the file upload to the server, name should be strict
                 file_picker_callback: function file_picker_callback(callback, value, meta) {
                     /* Provide file and text for the link dialog */
                     if (meta.filetype === 'file') {
