--- a/src/views/afterloginuser.ejs
+++ b/src/views/afterloginuser.ejs
@@ -63,7 +63,7 @@
     <% } else {%>
     <span class="username_span"><%= user.username%></span>
     <hr>
-    <a href="/user/dashboard" class="searchbar"><i class="fa fa-cog profileicon"></i>Dashboard</a>
+    <a href="/user/authorstatus" class="searchbar"><i class="fa fa-cog profileicon"></i>Dashboard</a>
 
     <a href="/author/<%= user.usernameslug%>" class="searchbar"><i class="fa fa-user-circle profileicon"></i>Mein
       Profil</a>
@@ -143,7 +143,7 @@
             </ul>
             <% } else {%>
             <li><span><%= user.username%></span></li>
-            <li><a href="/user/dashboard" class="searchbar"><i class="fa fa-cog profileicon"></i>Dashboard</a>
+            <li><a href="/user/authorstatus" class="searchbar"><i class="fa fa-cog profileicon"></i>Dashboard</a>
             </li>
             <li><a href="/author/<%= user.usernameslug%>" class="searchbar"><i
                   class="fa fa-user-circle profileicon"></i>Mein Profil</a></li>
