--- a/src/views/category.ejs
+++ b/src/views/category.ejs
@@ -10,7 +10,8 @@
   <meta name="name" content="<%= title%>" />
   <meta name="description" content="<%= category.description%>" />
   <!-- css -->
-  <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="3224d967-44a4-4a53-88f6-559eac64c8a5" data-blockingmode="auto" type="text/javascript"></script>
+  <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="3224d967-44a4-4a53-88f6-559eac64c8a5"
+    data-blockingmode="auto" type="text/javascript"></script>
   <link rel="shortcut icon" href="<%= favicon %>" type="image/x-icon">
   <link rel="stylesheet" href="/css/bootstrap.min.css" async>
   <link rel="stylesheet" href="/css/ionicons.min.css" async>
@@ -65,7 +66,7 @@
     <% } else {%>
     <span class="username_span"><%= user.username%></span>
     <hr>
-    <a href="/user/dashboard" class="searchbar"><i class="fa fa-cog profileicon"></i>Dashboard</a>
+    <a href="/user/authorstatus" class="searchbar"><i class="fa fa-cog profileicon"></i>Dashboard</a>
     <a href="/author/<%= user.usernameslug%>" class="searchbar"><i class="fa fa-user-circle profileicon"></i>Mein
       Profil</a>
     <a href="/log-out" class="searchbar"><i class="fa fa-sign-out profileicon"></i>Ausloggen</a>
@@ -146,7 +147,7 @@
             </ul>
             <% } else {%>
             <li><span class="username_span"><%= user.username%></span></li>
-            <li><a href="/user/dashboard" class="searchbar"><i class="fa fa-cog profileicon"></i>Dashboard</a>
+            <li><a href="/user/authorstatus" class="searchbar"><i class="fa fa-cog profileicon"></i>Dashboard</a>
             </li>
             <li><a href="/author/<%= user.usernameslug%>" class="searchbar"><i
                   class="fa fa-user-circle profileicon"></i>Mein Profil</a></li>
@@ -242,10 +243,14 @@
                           </div>
                           <div class="recommnet-madeby">
                             <div class="recommnet-madeby-img">
-                              <img src="<%= post[i*3 + j].postedBy.profilePicture%>">
+                              <a href="/author/<%= post[i*3 + j].postedBy.usernameslug%>">
+                                <img src="<%= post[i*3 + j].postedBy.profilePicture%>">
+                              </a>
                             </div>
                             <div class="recommnet-madeby-details">
-                              <h5><%= post[i*3 + j].postedBy.firstName%> <%= post[i*3 + j].postedBy.lastName%></h5>
+                              <a href="/author/<%= post[i*3 + j].postedBy.usernameslug%>">
+                                <h5><%= post[i*3 + j].postedBy.firstName%> <%= post[i*3 + j].postedBy.lastName%></h5>
+                              </a>
                               <!-- <p><%= post[i*3 + j].createdAt.toDateString() %></p> -->
                             </div>
                           </div>
@@ -405,52 +410,53 @@
         </div>
       </div>
       <% if(post.length != 0){%>
-      <div class="publish5-btn">
-        <% 
+                      <div class="publish5-btn">
+                        <% 
           var next = current + 1;
           if(next > pages) {
             next = pages;
           }
         %>
-                      <a href="/kategorie/<%= category.slug%>?page=<%= next%>"><span> Weitere Beiträge
-                          <%= category.name%></span>
-                        <span><i style="font-weight: 900;" class="fa fa-angle-right" aria-hidden="true"></i></span></a>
+                        <a href="/kategorie/<%= category.slug%>?page=<%= next%>"><span> Weitere Beiträge
+                            <%= category.name%></span>
+                          <span><i style="font-weight: 900;" class="fa fa-angle-right"
+                              aria-hidden="true"></i></span></a>
+                      </div>
+                      <% }%>
                     </div>
-                    <% }%>
                   </div>
                 </div>
-              </div>
-              <section class="footer-main" id="footer">
-                <div class="container">
-                  <div class="innner-footer-main">
-                    <div class="footer-social-icons">
-                      <div class="col-md-6 col-sm-6 text-right social-media">
-                        <a href="<%= twitter %>"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                        <a style="padding: 11px 20px;" href="<%= facebook %>"><i class="fa fa-facebook"
-                            aria-hidden="true"></i></a>
-                        <a href="<%= linkedin %>"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                <section class="footer-main" id="footer">
+                  <div class="container">
+                    <div class="innner-footer-main">
+                      <div class="footer-social-icons">
+                        <div class="col-md-6 col-sm-6 text-right social-media">
+                          <a href="<%= twitter %>"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                          <a style="padding: 11px 20px;" href="<%= facebook %>"><i class="fa fa-facebook"
+                              aria-hidden="true"></i></a>
+                          <a href="<%= linkedin %>"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                        </div>
+                        <div class="col-md-6 col-sm-6 text-left social-media">
+                          <a href="<%= youtube %>"><i class="fa fa-youtube" aria-hidden="true"></i></a>
+                          <a href="<%= instagram %>"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                          <a href="<%= pinterest %>"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
+                        </div>
                       </div>
-                      <div class="col-md-6 col-sm-6 text-left social-media">
-                        <a href="<%= youtube %>"><i class="fa fa-youtube" aria-hidden="true"></i></a>
-                        <a href="<%= instagram %>"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                        <a href="<%= pinterest %>"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
-                      </div>
-                    </div>
-                    <div class="footer-copyright">
-                      <p><% if(copyright != undefined) { %>
-                      <p>
-                        <%= copyright.charAt(0).toUpperCase() + copyright.substring(1) %></a></p><%}%></p>
+                      <div class="footer-copyright">
+                        <p><% if(copyright != undefined) { %>
+                        <p>
+                          <%= copyright.charAt(0).toUpperCase() + copyright.substring(1) %></a></p><%}%></p>
         </div>
         <hr>
         <div class="row">
            <div class="col-md-10">
               <div class="row">
                  <% for(var i = 0; i < footercategory.length; i ++){%>
-                      <div class="col-md-3 text-left">
-                        <a style="color: black;" href="/kategorie/<%= footercategory[i].slug%>"
-                          class="footercategory"><%= footercategory[i].name %></a>
-                      </div>
-                      <%}%>
+                        <div class="col-md-3 text-left">
+                          <a style="color: black;" href="/kategorie/<%= footercategory[i].slug%>"
+                            class="footercategory"><%= footercategory[i].name %></a>
+                        </div>
+                        <%}%>
               </div>
            </div>
            <div class="col-md-2">
@@ -516,81 +522,81 @@
   </div>
 </div>
 <%- mainSettings.googleAnalyticsCode %>
-                      <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-                      <script src="/js/jquery-2.1.3.min.js" type="text/javascript"></script>
-                      <script src="/js/popper.min.js"></script>
-                      <script src="/js/bootstrap1.js" type="text/javascript"></script>
-                      <script src="/js/owl.carousel.js" type="text/javascript"></script>
-                      <script src="/js/script1.js" type="text/javascript"></script>
-                      <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-                      <script src="/js/footer.js" type="text/javascript"></script>
-                      <script src="/js/ads.js" type="text/javascript"></script>
-                      <script>
-                        $('.category-search-bg1').click(function () {
-                          var qualify = $(this).attr('qualify');
-                          if (!window.showAds) {
-                            $('#adPopup').css('display', 'block');
-                            $('.popup-back').css('display', 'block');
-                          } else {
-                            if (qualify == "true") {
-                              $('#qualifyPopup').css('display', 'block');
+                        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+                        <script src="/js/jquery-2.1.3.min.js" type="text/javascript"></script>
+                        <script src="/js/popper.min.js"></script>
+                        <script src="/js/bootstrap1.js" type="text/javascript"></script>
+                        <script src="/js/owl.carousel.js" type="text/javascript"></script>
+                        <script src="/js/script1.js" type="text/javascript"></script>
+                        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+                        <script src="/js/footer.js" type="text/javascript"></script>
+                        <script src="/js/ads.js" type="text/javascript"></script>
+                        <script>
+                          $('.category-search-bg1').click(function () {
+                            var qualify = $(this).attr('qualify');
+                            if (!window.showAds) {
+                              $('#adPopup').css('display', 'block');
                               $('.popup-back').css('display', 'block');
                             } else {
-                              // if ($(this).attr('url') != "#") {
-                              window.open($(this).attr('url'));
-                              // }
+                              if (qualify == "true") {
+                                $('#qualifyPopup').css('display', 'block');
+                                $('.popup-back').css('display', 'block');
+                              } else {
+                                // if ($(this).attr('url') != "#") {
+                                window.open($(this).attr('url'));
+                                // }
+                              }
                             }
-                          }
-                        });
-                        $('.last-article').click(function () {
-                          var qualify = $(this).attr('qualify');
-                          if (!window.showAds) {
-                            $('#adPopup').css('display', 'block');
-                            $('.popup-back').css('display', 'block');
-                          } else {
-                            if (qualify == "true") {
-                              $('#qualifyPopup').css('display', 'block');
+                          });
+                          $('.last-article').click(function () {
+                            var qualify = $(this).attr('qualify');
+                            if (!window.showAds) {
+                              $('#adPopup').css('display', 'block');
                               $('.popup-back').css('display', 'block');
                             } else {
-                              // if ($(this).attr('url') != "#") {
-                              window.open($(this).attr('url'));
-                              // }
+                              if (qualify == "true") {
+                                $('#qualifyPopup').css('display', 'block');
+                                $('.popup-back').css('display', 'block');
+                              } else {
+                                // if ($(this).attr('url') != "#") {
+                                window.open($(this).attr('url'));
+                                // }
+                              }
                             }
-                          }
-                        });
-                        $('.notification').hide();
-                        function openNotification() {
-                          $('.notification').toggle();
-                        }
-                        $('.clear-notification').click(function () {
+                          });
                           $('.notification').hide();
-                        });
-                        $('.articlelink').click(function () {
-                          var qualify = $(this).attr('qualify');
-                          if (!window.showAds) {
-                            $('#adPopup').css('display', 'block');
-                            $('.popup-back').css('display', 'block');
-                          } else {
-                            if (qualify == "true") {
-                              $('#qualifyPopup').css('display', 'block');
+                          function openNotification() {
+                            $('.notification').toggle();
+                          }
+                          $('.clear-notification').click(function () {
+                            $('.notification').hide();
+                          });
+                          $('.articlelink').click(function () {
+                            var qualify = $(this).attr('qualify');
+                            if (!window.showAds) {
+                              $('#adPopup').css('display', 'block');
                               $('.popup-back').css('display', 'block');
                             } else {
-                              // if ($(this).attr('url') != "#") {
-                              window.open($(this).attr('url'));
-                              // }
+                              if (qualify == "true") {
+                                $('#qualifyPopup').css('display', 'block');
+                                $('.popup-back').css('display', 'block');
+                              } else {
+                                // if ($(this).attr('url') != "#") {
+                                window.open($(this).attr('url'));
+                                // }
+                              }
                             }
-                          }
-                        });
-                        $('.popup-back').click(function () {
-                          $(".popup").css('display', 'none');
-                          $(".popup-back").css('display', 'none');
-                        });
+                          });
+                          $('.popup-back').click(function () {
+                            $(".popup").css('display', 'none');
+                            $(".popup-back").css('display', 'none');
+                          });
 
-                        $('.closepopup').click(function () {
-                          $(".popup").css('display', 'none');
-                          $(".popup-back").css('display', 'none');
-                        });
-                      </script>
+                          $('.closepopup').click(function () {
+                            $(".popup").css('display', 'none');
+                            $(".popup-back").css('display', 'none');
+                          });
+                        </script>
 </body>
 
 </html>
