--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -57,7 +57,7 @@
     <% } else {%>
     <span class="username_span"><%= user.username%></span>
     <hr>
-    <a href="/user/dashboard" class="searchbar"><i class="fa fa-cog profileicon"></i>Dashboard</a>
+    <a href="/user/authorstatus" class="searchbar"><i class="fa fa-cog profileicon"></i>Dashboard</a>
 
     <a href="/author/<%= user.usernameslug%>" class="searchbar"><i class="fa fa-user-circle profileicon"></i>Mein
       Profil</a>
@@ -140,7 +140,7 @@
             </ul>
             <% } else {%>
             <li><span class="username_span"><%= user.username%></span></li>
-            <li><a href="/user/dashboard" class="searchbar"><i class="fa fa-cog profileicon"></i>Dashboard</a>
+            <li><a href="/user/authorstatus" class="searchbar"><i class="fa fa-cog profileicon"></i>Dashboard</a>
             </li>
             <li><a href="/author/<%= user.usernameslug%>" class="searchbar"><i
                   class="fa fa-user-circle profileicon"></i>Mein Profil</a></li>
@@ -388,7 +388,7 @@
                       <h2>Unbegrenzte Vielfalt genießen</h2>
                       <p>Genieße die unbegrenzte Vielfalt unserer qualifizierten Autoren. Folge ihnen, damit du keine
                         ihrer
-                        Veröffentlichungen mehr erpasst. Markiere Passagen oder ganze Beiträge, die dich begeistern,
+                        Veröffentlichungen mehr verpasst. Markiere Passagen oder ganze Beiträge, die dich begeistern,
                         damit
                         du sie später noch einmal lesen kannst.</p>
                     </div>
