--- a/src/views/single.ejs
+++ b/src/views/single.ejs
@@ -90,7 +90,7 @@
         <% } else {%>
         <span class="username_span"><%= user.username%></span>
         <hr>
-        <a href="/user/dashboard" class="searchbar"><i class="fa fa-cog profileicon"></i>Dashboard</a>
+        <a href="/user/authorstatus" class="searchbar"><i class="fa fa-cog profileicon"></i>Dashboard</a>
 
         <a href="/author/<%= user.usernameslug%>" class="searchbar"><i class="fa fa-user-circle profileicon"></i>Mein
             Profil</a>
@@ -176,7 +176,7 @@
                         </ul>
                         <% } else {%>
                         <li><span class="username_span"><%= user.username%></span></li>
-                        <li><a href="/user/dashboard" class="searchbar"><i
+                        <li><a href="/user/authorstatus" class="searchbar"><i
                                     class="fa fa-cog profileicon"></i>Dashboard</a>
                         </li>
                         <li><a href="/author/<%= user.usernameslug%>" class="searchbar"><i
