--- a/src/views/user/add-new-post.ejs
+++ b/src/views/user/add-new-post.ejs
@@ -182,11 +182,11 @@
                                     class="btn btn-danger text-white content-button">Reichweite</button></a>
                             </div>
                         </div>
-                        <div class="row">
+                        <!-- <div class="row">
                             <div class="form-group content-editor">
                                 <button type="button" class="btn btn-danger text-white content-button">Qualifizieren bei Dype</button>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
