--- a/src/views/author.ejs
+++ b/src/views/author.ejs
@@ -95,7 +95,7 @@
 						</div>
 				  </div>
 					<% if(article == "") { %>
-					<h4>No Post for now</h4>
+					<h4>Dieser Nutzer hat bisher keine Beiträge veröffentlicht.</h4>
 					<% } %> 
 					<div class="row">
 					<% for(let item of article) { %>
