--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -57,7 +57,7 @@
     <% } else {%>
     <span class="username_span"><%= user.username%></span>
     <hr>
-    <a href="/user/authorstatus" class="searchbar"><i class="fa fa-cog profileicon"></i>Dashboard</a>
+    <a href="/user/dashboard" class="searchbar"><i class="fa fa-cog profileicon"></i>Dashboard</a>
 
     <a href="/author/<%= user.usernameslug%>" class="searchbar"><i class="fa fa-user-circle profileicon"></i>Mein
       Profil</a>
@@ -140,7 +140,7 @@
             </ul>
             <% } else {%>
             <li><span class="username_span"><%= user.username%></span></li>
-            <li><a href="/user/authorstatus" class="searchbar"><i class="fa fa-cog profileicon"></i>Dashboard</a>
+            <li><a href="/user/dashboard" class="searchbar"><i class="fa fa-cog profileicon"></i>Dashboard</a>
             </li>
             <li><a href="/author/<%= user.usernameslug%>" class="searchbar"><i
                   class="fa fa-user-circle profileicon"></i>Mein Profil</a></li>
@@ -148,8 +148,6 @@
             <% } %>
             </ul>
           </div>
-          <a class="searchbar" href="javacript:void();"><span style="font-size:20px; padding-left: 10px;cursor:pointer"
-              onclick="openNotification()"><i class="fa fa-bell-o" aria-hidden="true"></i></span></a>
           <% } else {%>
           <a class="searchbar" href="/publisher"><span class="menu-title">Blogger
               werden</span></a>
