--- a/src/views/publisher.ejs
+++ b/src/views/publisher.ejs
@@ -349,9 +349,7 @@
                   <% } %>
                   </ul>
                </div>
-               <a class="searchbar" href="javascript:void();"><span
-                     style="font-size:20px; padding-left: 10px;cursor:pointer" onclick="openNotification()"><i
-                        class="fa fa-bell-o" aria-hidden="true"></i></span></a>
+              
                <% } else {%>
                <a class="searchbar" href="/publisher"><span class="menu-title">Blogger
                      werden</span></a>
@@ -512,7 +510,7 @@
                      font-weight: 300;
                      font-family: nunito;" >Lasse die Welt an deinen Erfahrungen und deinem Wissensschatz teilhaben.</p>
                      <p>Wir stehen täglich vor neuen Herausforderungen und Problemen, jene wir zu lösen haben. Dabei wurden vermutlich alle Herausforderungen und Probleme in der Vergangenheit bereits von anderen Menschen erfolgreich gemeistert.</p>
-                     <p style="padding-bottom: 30px;">Wäre es nicht wunderbar, eine Gemeinschaft aus Menschen zu schaffen, jene ihre persönlichen  rfahrungen teilen und andere auf ihrem Weg unterstützen?</p>
+                     <p style="padding-bottom: 30px;">Wäre es nicht wunderbar, eine Gemeinschaft aus Menschen zu schaffen, jene ihre persönlichen  Erfahrungen teilen und andere auf ihrem Weg unterstützen?</p>
                      <!-- <a href="/vision">Unsere Vision</a> -->
                   </div>
                </div>
@@ -625,7 +623,7 @@
                      <p>Dype ist sowohl Tagebuch, Lexikon und Suchmaschine für Geschichten, Erfahrungen und Wissen. Werde Teil und erhalte eine Entlohnung für deine geleisteten Beiträge.</p>
                   </div>
                   <div class="section-1-right-btn">
-                     <a style="padding: 15px 30px; border: 1px solid white; color: white;" href="#"><span>Jetzt Publisher
+                     <a style="padding: 15px 30px; border: 1px solid white; color: white;" href="/sign-up"><span>Jetzt Publisher
                            werden</span><span><i class="fa fa-long-arrow-right" aria-hidden="true"></i></span></a>
                   </div>
                </div>
@@ -642,7 +640,7 @@
 
 <div class="section-3">
    <div class="container faq">
-      <h2 class="text-center">Frequently Asked Questions</h2>
+      <h2 class="text-center">FAQ</h2>
       <div class="accordion">
          <div class="accordion-item">
             <a>Was ist Dype?</a>
@@ -653,7 +651,7 @@
          <div class="accordion-item">
             <a>Was benötige ich, um Dype zu nutzen?</a>
             <div class="content">
-               <p>Um Dype zu nutzen benötigst du lediglich eine Internetverbindung und ein Gerät, über das du die Plattform aufrufen kannst. Dort kannst du dich ganz einfach kostenlos registrieren und sofort loslegen. Mit jedem Account hast du die Möglichkeit, Beiträge zu lesen und eigene zu verfassen</p>
+               <p>Um Dype zu nutzen benötigst du lediglich eine Internetverbindung und ein Gerät, über das du die Plattform aufrufen kannst. Dort kannst du dich ganz einfach kostenlos registrieren und sofort loslegen. Mit jedem Account hast du die Möglichkeit, Beiträge zu lesen und eigene zu verfassen.</p>
             </div>
          </div>
          <div class="accordion-item">
