--- a/src/views/user/partials/sidebar.ejs
+++ b/src/views/user/partials/sidebar.ejs
@@ -23,7 +23,7 @@
           </ul>
         </li>
         <li>
-          <a href="/user/pending-posts"><i class="fa fa-low-vision"></i> <span>Pending Posts</span></a>
+          <a href="/user/pending-posts"><i class="fa fa-low-vision"></i> <span>Ausstehende Beiträge</span></a>
         </li>
         <li>
           <a href="/user/followers"><i class="fa fa-users"></i> <span>Meine Follower</span></a>
