--- a/src/views/user/profile.ejs
+++ b/src/views/user/profile.ejs
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <div class="text-center">
-                <h3 class="profile_text">Please fill your information. Then you can post the articles</h3>
+                <h3 class="profile_text">Bitte hinterlege alle notwendigen Informationen, um Beiträge veröffentlichen zu können.</h3>
             </div>
             <div class="progress">
                 <div class="progress-bar" style="width:0%">
@@ -110,12 +110,12 @@
                                     <input type="text" name="tax" class="form-control" value="<%= user.tax %>" id="tax">
                                 </div>
                                 <div class="col-12 mb-20">
-                                    <label for="">Über dich (Diese Informationen werden in deinem Profil angezeigt) (*)</label>
-                                    <textarea name="about" required id="about" cols="30" rows="10" class="form-control"
+                                    <label for="">Über dich (Diese Informationen werden in deinem Profil angezeigt)</label>
+                                    <textarea name="about" id="about" cols="30" rows="10" class="form-control"
                                         maxlength="150"><%= user.about %></textarea>
                                 </div>
                                 <div class="col-12 mb-20">
-                                    <label for="">Email Notification</label>
+                                    <label for="">Email Benachrichtigungen</label>
                                     <input type="checkbox" name="emailsend"  style="width: 30px; height: 30px;" <% if(user.emailsend == true){ %>checked<% } %> >
                                 </div>
                                 <div class="col-12 mb-20">
