--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -159,8 +159,8 @@
                 class="fa fa-user"></i></span><span
               style="position: absolute; bottom: -10px; left: -3px;font-size: 10px;">Registrieren</span></a>
           <a href="/login" class="searchbar"><span style="font-size:20px; padding-left: 10px;cursor:pointer"><i
-                class="fa fa-sign-in"></i></span><span
-              style="position: absolute; bottom: -10px;left: 4px; font-size: 10px;">Einloggen</span></a>
+                class="fa fa-sign-in"></i></span>
+                <span style="position: absolute; bottom: -10px;left: 4px; font-size: 10px;">Einloggen</span></a>
           <%}%>
             </div>
          </section>
