--- a/src/views/user/add-new-post.ejs
+++ b/src/views/user/add-new-post.ejs
@@ -239,7 +239,7 @@
         </div>
     </form>
     <div class="modal fade" id="post-enable" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle">
-        <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-dialog" role="document">
             <div class="modal-content" style="border-radius: 10px !important">
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLongTitle">
