--- a/src/views/user/add-new-post.ejs
+++ b/src/views/user/add-new-post.ejs
@@ -248,7 +248,7 @@
                 </div>
                 <div class="modal-body" style="padding: 20px !important;">
                     <div class="alert alert-warning">
-                        You didn't complete your profile. Please complete that and then post the articles. Thanks
+                        Du musst dein Profil vervollständigen, um Beiträge zu veröffentlichen. 
                     </div>
                 </div>
                 <div class="modal-footer">
